--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
         <title>Aden's Programming Portfolio</title> 
     </head>
     <body>
-        <center> <img src="csc106_banner.jpg" alt="CSC 106: The Joy of Programming Banner" width="1000">
+        <center> <img src="mybanner.jpg" alt="My programming portfolio" width="1000">
             <table>
                 <thead>
                     <tr>
-                <th> <a href="https://adenpessin.github.io"> <img src="homebutton.png" alt="home button" width="250"> </a> </th>
-                        <th> <a href="https://adenpessin.github.io/javascripts.html"> <img src="Javascriptsbutton.png" alt="Javascripts button" width="250"> </a> </th>
-                        <th> <a href="https://adenpessin.github.io/about.html"> <img src="aboutmebutton.png" alt="About me button" width="250"> </a> </th>
+                <th> <a href="https://apessin.github.io"> <img src="home.png" alt="home button" > </a> </th>
+                        <th> <a href="https://apessin.github.io/javascripts.html"> <img src="javascripts.png" alt="Javascripts button"> </a> </th>
+                        <th> <a href="https://apessin.github.io/apps.html"> <img src="apps.png" alt="My applications"> </a> </th>
+                        <th> <a href="https://apessin.github.io/about.html"> <img src="about.png" alt="About me button"> </a> </th>
                     </tr>
                 </thead>
             </table>
