--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
     <head>
         <meta charset="utf-8">
         <title>Aden's Programming Portfolio</title> 
+        
     </head>
     <body>
-        <center> <img src="mybanner.jpg" alt="My programming portfolio" width="1000">
+        <center> <img src="mybanner.jpg" alt="My programming portfolio">
             <table>
                 <thead>
                     <tr>
-                <th> <a href="https://apessin.github.io"> <img src="home.png" alt="home button" > </a> </th>
+                        <th> <a href="https://apessin.github.io"> <img src="home.png" alt="home button" > </a> </th>
                         <th> <a href="https://apessin.github.io/javascripts.html"> <img src="javascripts.png" alt="Javascripts button"> </a> </th>
                         <th> <a href="https://apessin.github.io/apps.html"> <img src="apps.png" alt="My applications"> </a> </th>
                         <th> <a href="https://apessin.github.io/about.html"> <img src="about.png" alt="About me button"> </a> </th>
@@ -22,4 +23,5 @@
         <p>This website, created by me, Aden Pessin, is my CSC 106 portfolio. It will show off everything I will learn in this course,
             as everything under this domain was coded by me. I am very excited to work on this, and I can't wait to see how this website grows and evolves.</p>
     </body>
+    
 </html>
